rename argument and class

--- a/ticketBot/config.yml
+++ b/ticketBot/config.yml
@@ -5,3 +5,6 @@ Config:
   ticketPage: "https://kktix.com/events/jolin0421-2/registrations/new"
   executable_path: "/Users/tyyen/Downloads/chromedriver"
   ticketCount: 2
+Browser:
+  width: 840
+  height: 640
